--- a/config/database.yml
+++ b/config/database.yml
@@ -1,12 +1,13 @@
 default: &default
   adapter: postgresql
-  username: postgres
-  password: postgres
+  encoding: unicode
+  host: <%= ENV['POSTGRES_HOST'] %>
+  user: <%= ENV.fetch("POSTGRES_USER") %>
+  password: <%= ENV.fetch("POSTGRES_PASSWORD") %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
-  host: localhost
   <<: *default
   database: rideshare_development
   variables:
@@ -17,7 +18,6 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  host: localhost
   database: rideshare_test
 
 production:
