--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -11,7 +11,7 @@ ARG RUBY_VERSION=3.2.2
 FROM ruby:$RUBY_VERSION-slim as base
 
 RUN apt-get update -qq \
-    && apt-get install --no-install-recommends -y build-essential locales libvips libpq-dev git postgresql-client graphviz \
+    && apt-get install --no-install-recommends -y build-essential locales libvips libpq-dev git postgresql-client graphviz curl \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists /var/cache/apt/archives
 
@@ -30,13 +30,6 @@ ENV LANGUAGE en_US:en
 ENV LC_ALL en_US.UTF-8
 
 COPY . ./
-# COPY --from=node /usr/lib /usr/lib
-# COPY --from=node /usr/local/share /usr/local/share
-# COPY --from=node /usr/local/lib /usr/local/lib
-# COPY --from=node /usr/local/include /usr/local/include
-# COPY --from=node /usr/local/bin /usr/local/bin
-# COPY --from=node /opt /opt
-# COPY --from=node /app/node_modules /app/node_modules
 COPY --from=gems /usr/local/bundle /usr/local/bundle
 
 EXPOSE 3000
